cmake_minimum_required(VERSION 3.26)
project(EverythingWithCPP)

set(CMAKE_CXX_STANDARD 17)

add_executable(EverythingWithCPP main.cpp
        1_Basic_programming/5_Star_Pattern/8.cpp
        1_Basic_programming/5_Star_Pattern/9.cpp
        1_Basic_programming/5_Star_Pattern/10.cpp
        1_Basic_programming/5_Star_Pattern/11.cpp
        1_Basic_programming/5_Star_Pattern/12.cpp
        1_Basic_programming/5_Star_Pattern/13.cpp
        1_Basic_programming/4_Loop/2_sum_of_even.cpp)
